# biketour_planner

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  README.md  cliff.toml  config.yaml  environment.yml  index.html  main.py  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: auto-version.yml  codeql.yml  docs.yml  lint.yml  release.yml  tests.yml
brouter_docker/: Dockerfile
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/api/: index.html
dev/architecture/: index.html
dev/changelog/: index.html
dev/configuration/: index.html
dev/development/docstrings/: index.html
dev/development/metrics/: index.html
dev/development/release/: index.html
dev/development/testing/: index.html
dev/en/: index.html
dev/en/api/: index.html
dev/en/architecture/: index.html
dev/en/changelog/: index.html
dev/en/configuration/: index.html
dev/en/development/docstrings/: index.html
dev/en/development/metrics/: index.html
dev/en/development/release/: index.html
dev/en/development/testing/: index.html
dev/en/getting-started/: index.html
dev/en/installation/: index.html
dev/en/troubleshooting/: index.html
dev/en/usage/: index.html
dev/getting-started/: index.html
dev/installation/: index.html
dev/search/: search_index.json
dev/troubleshooting/: index.html
dev/usage/: index.html
docs/: ARCHITECTURE.md  Installation.md  QUICKSTART.md  TESTING.md  troubleshooting.md
docs/de/: configuration.md  getting-started.md  index.md  installation.md  troubleshooting.md
docs/de/api/: index.md
docs/de/architecture/: index.md
docs/de/development/: docstrings.md  metrics.md  release.md  testing.md
docs/de/usage/: index.md
docs/en/: configuration.md  getting-started.md  index.md  installation.md  troubleshooting.md
docs/en/api/: index.md
docs/en/architecture/: index.md
docs/en/development/: docstrings.md  metrics.md  release.md  testing.md
docs/en/usage/: index.md
scripts/: increment_version.py
src/biketour_planner/: __init__.py  brouter.py  config.py  constants.py  elevation_calc.py  elevation_profiles.py  excel_export.py  excel_hyperlinks.py  excel_info_reader.py  exceptions.py  geoapify.py  geocode.py  gpx_route_manager.py  gpx_route_manager_static.py  gpx_utils.py  ics_export.py  logger.py  models.py  parse_booking.py  pass_finder.py  pdf_export.py
src/biketour_planner/utils/: cache.py
tests/: test_brouter.py  test_config.py  test_e2e.py  test_elevation_calc.py  test_elevation_profiles.py  test_excel_export.py  test_excel_hyperlinks.py  test_excel_info_reader.py  test_geoapify.py  test_geocode.py  test_gpx_route_manager.py  test_gpx_route_manager_private.py  test_gpx_route_manager_static.py  test_gpx_utils.py  test_ics_export.py  test_integration.py  test_models.py  test_parse_booking.py  test_pass_finder.py  test_pdf_export.py  test_pdf_export_excel_info.py  test_utils_cache.py
